# Anubis

./: .gitignore  LICENSE  README.md  client.py  dh_params.pem  key  pyproject.toml  requirements.txt  server.py  setup.py
Anubis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
client/: client.py  requirements.txt
client/config/: config.json
client/modules/: authentication.py  communication.py  encryption.py
client/modules/features/: __init__.py  command_queue.py  file_transfer.py  keylogger.py  screenshot.py  system_info.py
client/tests/: test_system_info.py
server/: requirements.txt  server.py  server_gui.py
server/config/: auth_secret.txt  config.json
server/modules/: authentication.py  client_management.py  command_handler.py  communication.py  encryption.py  logging_config.py  rate_limiter.py  state.py
server/static/: server_gui.html
server/tests/: test_communication.py
