[project]
name = "Anubis"
version = "1.0.0"
description = "A modular Remote Access Tool (RAT) system"
authors = [
    { name = "Divine Chukwu", email = "chukwudivineify@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "mss",
    "psutil",
    "pynput",
    "opencv-python",
    "pyperclip",
    "cryptography",
    "pyautogui",
    "pystyle",
    "flask",
]

[project.urls]
Homepage = "https://github.com/dee-engineer/Anubis"